[tool.poetry]
name = "uw-election-verifier"
version = "0.1.0"
description = ""
authors = ["rainbowhuanguw <huangc34@uw.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
